--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="deskripsi_ampera">What fairly seen about Palembang city? It is definitely The Ampera Bridge. This bridge is typically Palembang city icon that located in the heart of Palembang city, that connected Seberang Ulu area and Seberalng Ilir that separated by the Musi River.
+
+The idea to unite the two mainland in Palembang “Seberang Ulu and Seberang Ilir” by the bridge, was actually existed since Gemeente era in 1906, when the Mayor of Palembang is held by Le Cocq de Ville, in1924. This idea was raised again and made a lot of effort to realize it. However, until Le Cocq was out of duty, or when the Dutch pull out of Indonesia, the project was never realized.
+
+Until 1965, this bridge was officially opened by Bung Karno, the Indonesia’s first President. The idea of this bridge came up to be a match for London’s Tower Bridge and the fund for the development is taken by Japanase war reparations, with Fuji Car Manufacturing Co. Ltd as the designer and constractioner. After the development, the early name of the bridge was Bung Karno Bridge, but following his fall, it was renamed to Ampera Bridge</string>
 </resources>
