--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,13 @@
 
 The idea to unite the two mainland in Palembang “Seberang Ulu and Seberang Ilir” by the bridge, was actually existed since Gemeente era in 1906, when the Mayor of Palembang is held by Le Cocq de Ville, in1924. This idea was raised again and made a lot of effort to realize it. However, until Le Cocq was out of duty, or when the Dutch pull out of Indonesia, the project was never realized.
 
-Until 1965, this bridge was officially opened by Bung Karno, the Indonesia’s first President. The idea of this bridge came up to be a match for London’s Tower Bridge and the fund for the development is taken by Japanase war reparations, with Fuji Car Manufacturing Co. Ltd as the designer and constractioner. After the development, the early name of the bridge was Bung Karno Bridge, but following his fall, it was renamed to Ampera Bridge</string>
+Until 1965, this bridge was officially opened by Bung Karno, the Indonesia’s first President. The idea of this bridge came up to be a match for London’s Tower Bridge and the fund for the development is taken by Japanase war reparations, with Fuji Car Manufacturing Co. Ltd as the designer and constractioner. After the development, the early name of the bridge was Bung Karno Bridge, but following his fall, it was renamed to Ampera Bridge
+    </string>
+
+    <string name="deskripsi_quran_alakbar">
+        Qur\'an Al-Akbar or also commonly called the Giant Qur\'an in the city of Palembang is located at Pondok Pesantren Al Ihsaniyah, Gandus, Palembang.
+        The Qur\'an consists of 630 pages and also equipped with a recitation and Khataman prayer for beginners.
+        Each sheet inscribed verses of the Koran on wooden tembesu are decorated with carved ornaments typical Palembang.
+        The manufacturing process itself takes a relatively long time, about seven years.
+    </string>
 </resources>
