--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="deskripsi_ampera">What fairly seen about Palembang city? It is definitely The Ampera Bridge. This bridge is typically Palembang city icon that located in the heart of Palembang city, that connected Seberang Ulu area and Seberalng Ilir that separated by the Musi River.
-
-The idea to unite the two mainland in Palembang “Seberang Ulu and Seberang Ilir” by the bridge, was actually existed since Gemeente era in 1906, when the Mayor of Palembang is held by Le Cocq de Ville, in1924. This idea was raised again and made a lot of effort to realize it. However, until Le Cocq was out of duty, or when the Dutch pull out of Indonesia, the project was never realized.
-
-Until 1965, this bridge was officially opened by Bung Karno, the Indonesia’s first President. The idea of this bridge came up to be a match for London’s Tower Bridge and the fund for the development is taken by Japanase war reparations, with Fuji Car Manufacturing Co. Ltd as the designer and constractioner. After the development, the early name of the bridge was Bung Karno Bridge, but following his fall, it was renamed to Ampera Bridge
+        The idea to unite the two mainland in Palembang “Seberang Ulu and Seberang Ilir” by the bridge, was actually existed since Gemeente era in 1906, when the Mayor of Palembang is held by Le Cocq de Ville, in1924. This idea was raised again and made a lot of effort to realize it. However, until Le Cocq was out of duty, or when the Dutch pull out of Indonesia, the project was never realized.
+        Until 1965, this bridge was officially opened by Bung Karno, the Indonesia’s first President. The idea of this bridge came up to be a match for London’s Tower Bridge and the fund for the development is taken by Japanase war reparations, with Fuji Car Manufacturing Co. Ltd as the designer and constractioner. After the development, the early name of the bridge was Bung Karno Bridge, but following his fall, it was renamed to Ampera Bridge
     </string>
 
     <string name="deskripsi_quran_alakbar">
@@ -21,5 +19,11 @@ Until 1965, this bridge was officially opened by Bung Karno, the Indonesia’s f
         The Qur\'an consists of 630 pages and also equipped with a recitation and Khataman prayer for beginners.
         Each sheet inscribed verses of the Koran on wooden tembesu are decorated with carved ornaments typical Palembang.
         The manufacturing process itself takes a relatively long time, about seven years.
+    </string>
+
+    <string name="deskripsi_jakabaring">
+        Palembang is often designated as the host of the Sports Events both national and international.
+        This stadium belongs to the category of 5 biggest stadium in Indonesia.
+        With capacity to accommodate 36,000 spectator, this stadium also be used as a place for events in Palembang.
     </string>
 </resources>
