Menambah deskripsi beberapa daerah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,142 @@
         Here you can find a variety of shops, selling songket, such as Fikri Collection, Cek Ilah, Zainal Songket,and others.
         The price of songket is unique compared to the others, because the fabric is waven using gold thread.
     </string>
+
+    <string name="deskripsi_mount_dempo">
+        Mount Dempo offers amazing views for tourists mountain.
+        The volcano is still active and located in Pagaralam City, with an altitude of 3,1925 meters above sea level.
+        Feel the thrill of the beauty of Mount Dempo which are also surrounded by green tea plantations and fresh air
+    </string>
+
+    <string name="deskripsi_tea_plantation">
+        If you are a fan of tea, do not forget to go to the tea plantations to enjoy the fresh tea original from Pagaralam on the spot.
+        Surely no one can beat the freshness of tea while enjoying views of the tea plantations and Mount Dempo.
+    </string>
+
+    <string name="deskripsi_lematang_waterfall">
+        This waterfall is located in the District of North Dempo, Pagaralam City.
+        The location is easily accessible when crossing the road between Lahat and Pagaralam.
+        To reach the base of the waterfall, visitors can use the staircase.
+        On the left and right down the stairs there are severalcafes and seating to relax while enjoying a view of the waterfall and feel the soothing splash of the waterfall.
+    </string>
+
+    <string name="deskripsi_megalith_sites_pagar_alam">
+        Pagaralam listed by UNESCO as a candidate of World Heritage Site.
+        Megaliths in Pagaralam estimated more than 1000 years old.
+        These remains were encountered around Atungbungsu Village Plantations, Cawang Lama Village Coffee Plantations, Tegur Wangi Lama, Tanjung Aro, and Mingkik.
+        That said, this Atungbungsu Village Plantations area is the administrative center in the Megalithic era.
+    </string>
+
+    <string name="deskripsi_tebat_gheban">
+        Thebat Gheban is located 7 km from Pagaralam City.
+        This lake has a width of 3 hectares with a depth of 12 meters. Sometimes, local fishermen come and go fishing in the afternoon.
+        The lake is also surrounded by beautiful pine trees.
+        Come and enjoy its beauty white fishing there.
+    </string>
+
+    <string name="deskripsi_konger_lake">
+        Konger Lake is located on the outskirts of the Sungai Dia Village, Sungai Keruh Sub-District, Musi Banyuasin Regency with distance to Sekayu City approximately 45 km by road.
+        This place is named after an oil drilling American businessman, Mr.Congger. In 1949, he explored in the region and make this lake.
+        Now, in the lake there is Waterboom Recreation Facility established by the local community, named A2YU Water Fun and is visited by local communities and from outside the region.
+    </string>
+
+    <string name="deskripsi_sekayu_waterfront_park">
+                This park is one of the favorite tourist attraction of visitors because it is directly facing the Musi River.
+        Sekayu Waterfront frequently visited by tourists outside the region and abroad as it always has been the location of the event, Musi Triboatton.
+    </string>
+
+    <string name="deskripsi_ulak_lia_lake">
+        The lake is located in the Village of New Soak. Musi Banyuasin District, this lake has an area about 75 ha with a distance from the downtown Sekayu approximately 2.5 km or about 20 minutes.
+        Panorama of the beautiful lake and surrounded by shady trees and the atmosphere feels very natural, especially in the rainy season.
+    </string>
+
+    <string name="deskripsi_rakit_house">
+        This house is located in Bayung Lencir Sub-District, usually inhabited by the descendants of Palembangnese.
+        According to the story, in the colonial period they were driven out by the Dutch colonial government and moved to Bayung Lencir.
+        Up to now there are still many homes raft along the river bank which divides Bayung Lencir Sub-District.
+    </string>
+
+    <string name="deskripsi_gegas_lake">
+        The lake which has a dam is located in the Sugih Waras Village, District of Sukakarya, Musirawas Regency, South Sumatra. From the topof the cliff at the side of the dam, visitors can enjoy the view of the vast lake surface.
+        In addition people who like fishing can do his hobby in this lake because the lake is also used as the location of freshwater fish farming.
+    </string>
+
+    <string name="deskripsi_aur_lake">
+        The lake is located in the Sukamaju Village, Sumber Harta, Musi Rawas, South Sumatra, Indonesia.
+        There is a floating cafetaria for thos who want to go around the lake.
+        You can enjoy a meal while watching the natural beauty of Aur Lake.
+    </string>
+
+    <string name="deskripsi_serelo_hill">
+        Another photo of the beauty of the mountains in South Sumatra is Bukit Serelo which is one of Lahat landmarks.
+        This hill is popular as Thumb Hill because its peak shape that resembles a thumb.
+        But when viewed from the other side, sometimes this hill also looks like the index finger.
+    </string>
+
+    <string name="deskripsi_maung_waterfall">
+        If you want to feel a different sensation of an incredible waterfall, you should visit Curup Rinduhati Maung Village, District Gumay Ulu.
+        This waterfall has a height and a width of 80 meters. Experience the grandeur of this waterfall directly in lahat.
+    </string>
+
+    <string name="deskripsi_bidadari_waterfall">
+        This waterfall is located in the village of Karang Dalam, Pulau Pinang sub-district, about 8 km from Lahat City.
+        Nearby there are three other waterfalls, Bujang Gadis Waterfall.
+    </string>
+
+    <string name="deskripsi_santo_mikael_church">
+        Santo Mikael Church was first built by Father Jan Van Kamper SCJ for the spread of Christianity in South Sumatra.
+        Building for worship was built on September 19, 1898, before Indonesia\'s independence.
+        This church in the Japanese colonial era was stopped its activity because it was used as a shed, but after that it was re-enabled.
+        This small church has a unique and distinctive shape that is a square of twelve.
+        According to the story, the twelve square shape is following the shape of the original parish church of Pastor van Kampen (Netherlands).
+    </string>
+
+    <string name="deskripsi_megalith_sites_lahat">
+        Lahat City is an answer for the curiosity of archaelogists.
+        This area is rich with megaliths heritage.
+        Rather, there are 1,027 heritage of megalithic era that scattered in 41 locations since  2000 years ago.
+        The most popular is the High Day Megalith or Pasemah Megalith.
+    </string>
+
+    <string name="deskripsi_harimau_cave">
+        In Ogan Komering Ulu, in 2009-2012 66 framework of various age of death with a stone tomb tradition complete with stock tomb of pottery,shells of mollusks,and metal objects were discovered.
+        Alongwith that paintings on the cave walls were found.
+        This shows that the tradition of rock caves are also known by the people in the western part of the archipelago, not only in Kalimantan and Maluku and Papua.
+        The painting material is hematite, an iron oxide mineral.
+    </string>
+
+    <string name="deskripsi_selabe_cave">
+        The cave is located 150 meters from the bridge connecting the Princess Cave by road along the central Sumatra.
+        On the top of it there is the tomb of Puyang Tobohan.
+        Once when Puyang Tobohan was meditating for Bengkulu Sea View fromthe top of the cave,Pahit Lidah condemned it.
+        This cave is also called by the villagers of Padang Bindu Village as The Demon Cave.
+
+    </string>
+
+    <string name="deskripsi_putri_cave">
+        This cave is filled with stalactites and stalagmites.
+        The stalactites and stalagmites meet each other and form a unique pillar.
+        This cavealso has a swimming pool where the water comes from Semuhun River, which empties into the Ogan River.
+        In some parts of the cave, there is a large rock where we could sit and sleep.
+        There is a legend that says that the cave was originally village that turned to stone because of Pahit Lidah words.
+        The princess herself turned into stone for ignoring the Pahit Lidah.
+    </string>
+
+    <string name="deskripsi_ranau_lake"></string>
+    <string name="deskripsi_mariza_island"></string>
+
+    <string name="deskripsi_sembilang_national_park"></string>
+
+    <string name="deskripsi_tujuh_panggung_waterfall"></string>
+    <string name="deskripsi_batu_betang_waterfall"></string>
+
+    <string name="deskripsi_teluk_gelam"></string>
+    <string name="deskripsi_hundred_pillars_house"></string>
+
+    <string name="deskripsi_temam_waterfall"></string>
+    <string name="deskripsi_magic_hill"></string>
+
+    <string name="deskripsi_bedegun_waterfall"></string>
+
+    <string name="deskripsi_bumi_ayu_temple"></string>
 </resources>
