Mengisi beberapa daerah (Empat Lawang dan Banyuasing)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,7 +250,9 @@
     </string>
 
     <string name="deskripsi_sembilang_national_park">
-        Sembilang National Park is the representative of turf swamp forest, fresh water
+        Sembilang National Park is the representative of turf swamp forest, freshwater swampforest and riparian forests (riverside) in the province of South Sumatera. This national park is an important area for the types of water birds.
+        Mudland Delta Banyuasin is a place for thousands of migratory birds searching for foods coming from the northern part of Asia and the daily amount of water birds here is estimated at 80,000.
+        Visitors can exploring rivers and mangrove forests while observing wildlife, fishing, watching birds migrant from Siberia and freshwater dolphins.
     </string>
 
     <string name="deskripsi_tujuh_panggung_waterfall">
