tambah keterangan di beberapa lokasi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -302,6 +302,53 @@
         This temple complex has an area of 75.56 ha.
     </string>
 
+    <string name="deskripsi_lubuk_tudung">
+        No less interesting is Lubuk Tundung tourism object. The tourism object is quite unique to be visited and located in Tanjung Ning Lama village, Tebing Tinggi district. People who want to visit this tourism spot should take about 2 kilometers from the three-junction of Jalan Lintas Sumatera (Jalinsum) Tebik Tinggi-Lubuklinggau.
+
+        By crossing the county road for about 10 minutes from Jalinsum intersection, we will arrive at Tanjung Ning Lama village. Coffee plantation and forest streams are surrounding Air Saling river, which is the water source of Lubuk Tudung.
+
+        Arriving at Lubuk Tudung location, the green natural panorama seems to make the atmosphere around comfortable and beautiful. Marl stone also appears surround Lubuk Tudung which about 8 meters depth.
+
+        In the center of pool there is a whirlpool. This whirlpool itself formerly seem heavy. Especially when the river tide, the whirlpool will look widened and seemed heavy rotate.
+    </string>
+
+    <string name="deskripsi_rafting">
+        Musi Ulu River flow gives the opportunity to ride rubber boat while rafting. The route along 29 kilometers from Tanjungraya village to Tebingtinggi, the capital regency of Empat Lawang, has some points of torrential flow which can increase adrenaline.
+
+        Beside heavy flow and waves, eddies also make the boat bobbing on the sidelines of large rocks, which certainly make the passenger boat had to be careful. Otherwise, the boat can be overturned and hit a rock. Without wearing helmet, of course it would be dangerous activity. This route has three difficulty levels, with heavy flow and quite dangerous. At some points, the curve due to large stones made the rubber boats bobbing and if not capable to control, can be reversed. Along the route, there are at least 13 rapids which are quite heavy, leading to stone and make the boat jumping.
+
+        The scenery along the river also gives its own nuances. Besides the hills, the steep cliffs also can be used for climbing object. Also, some of estuary of the creek with blackened rocks and a fairly large size gives a beautiful view. The calm flow at some points make rafting participants must save some energy to row the boat. The 29 kilometers distance can be reach only two hours using a car, with a rubber boat takes six hours.
+    </string>
+
+    <string name="deskripsi_water_vang">
+        Watervang is a village that located in sub-district of East Lubuk Linggau I. The name of the village is taken from the dam that made during Dutch colonization in Kelingi River. In fact, this location is also the dam in this place. The name of Watervang means Water Catchment or dam.
+    </string>
+
+    <string name="deskripsi_gemuhak_hotsprings">
+        Gemuhak Hot Springs tourist destination is located on the top of Umang hill, near to Penindaian village, Semendo district about 70 km from Muara Enim, precisely in Gunung Tiga village. The trip from Gunung Tiga village to the area takes about 6 km and by walking takes about 3 hours. This tourist destination is in protected forest area, and there is no residential. The location of Gemuhak Hot Springs is on 389 meters height above sea level.
+
+        Gemuhak Hot Springs has several sources or hot springs water scattered at some point in this tourist location. The central of hot water can spread hot water spurt or glaciers with about three meters height. It is about 15 seconds each spurt. By those times, and produce the phenomenon of spurts and then stopped, then spurted again, so that local people called it as “Maluan”.
+
+        This hot water can reach the highest temperature of 98C. This hot water contains minerals and salty. It can consumed directly, because it is already boiling. The hot water produced has sulfur and a high iodine which of course can prevent mumps because the iodine. The water also can treat various skin diseases because of the sulfur content.
+    </string>
+
+    <string name="deskripsi_napal_carik">
+        Napal Carik waterfall is one of waterfalls in South Sumatra. Located in Muara Emil village, Tanjung Agung district, Muara Enim which is about 80 km from Muara Enim city.
+
+        To go to Napal Carik waterfall, either through Muara Emil or Pagar Dewa village, Tanjung Agung district, Muara Enim, will take about 20 Km. The trip takes quite extreme, especially during the rainy season with motorcycle. It takes about two hours to reach Napal Carik waterfall.
+
+        The road to Napal Carik waterfall will be treated with natural scenery of rice fields Pagar Dewa, as well as rubber and coffee plantation owned by residents that lined up on the left and right of the road. On the way to the waterfall, the visitors also meet with Puyang Matauh burial complex, which is one of three puyang, the founder of Muara Emil village. It is also through Talang Tebat Buntu which contained of 15 huts, the rest area of villagers after working in the fields.
+
+        Arrive at Napal Carik Waterfall area, visitors must go down through stairs about 100 rungs which are made naturally from soil. When reached Emil river then you will see Napal Carik waterfall steps. A glimpse, this waterfall looks like Niagara Falls with about 50 meters height.
+
+        It is called Napal Carik, because the sound of water “becarik” (gurgling) and fall to “napal” (hard ground like a stone). There is waterfall in Emil river, because many waterfalls that resembles a small waterfall. But the most often visited and famous one is Napal Carik waterfall.
+    </string>
+
+    <string name="deskripsi_bedegung_rafting">
+        It is about 56 km to the south of Muara Enim with about an hour or 210 km trip from Palembang city. Can be reached by all types of vehicles with good road conditions. Thus the distance from Palembang to Curup Tenang Bedegung village is only about 2 hours, or about 177 km.
+
+        Bedegung Rafting spot is located near to Curup Tenang waterfall tourism. It is a newly developed tourist destination in Muara Enim, this activity has carried out in Enim river in around Curup Tenang waterfall location. The adventurers can enjoy a challenging adventure in rapids class III – IV Enim River as one of river in South Sumatra that proper for rafting both for family or expeditions.
+    </string>
 
     <string name="facebook_app_id">1691040570962158</string>
     <string name="fb_login_protocol_scheme">fb1691040570962158</string>
